# dioxus-portfolio

./: Cargo.toml  Dioxus.toml
assets/: font.css  main.css
assets/js/: main.js
macros/: Cargo.toml
macros/src/: lib.rs
portfolio/: Cargo.toml  build.rs
portfolio/assets/: main.css
portfolio/content/blog/: blog0.md
portfolio/content/projects/: my_file.md
portfolio/src/: main.rs
portfolio/src/components/: hero.rs  markdown.rs  mod.rs  navbar.rs  terminal_list.rs
portfolio/src/views/: blog.rs  home.rs  projects.rs
src/: main.rs
src/components/: hero.rs  mod.rs  navbar.rs
