[package]
name = "portfolio"
version = "0.1.0"
authors = ["Ryder-C <rydercasazza@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
# dioxus_markdown = { git = "https://github.com/DioxusLabs/markdown.git", version = "0.3.0-alpha.1" }
dioxus_markdown = { git = "https://github.com/Ryder-C/markdown.git" }
wasm-bindgen = "=0.2.97"
macros = { path = "../macros" }

[build-dependencies]
build = { path = "../build" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
